5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1798_2572.log
== TEST (2019-06-10 13:43:33) 
-- CODE:
from numpy import*

v = array(eval(input("vetor:")))
vn = zeros(2, dtype=int)

for e in range(size(v)):
	if(e % 2 == 0):
		vn = vn + 1
	else:
	print(size(v) - vn)
		
-- ERROR:
File "XXXX", line 10
    print(size(v) - vn)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:43:41) 
-- CODE:
from numpy import*

v = array(eval(input("vetor:")))
vn = zeros(2, dtype=int)

for e in range(size(v)):
	if(e % 2 == 0):
		vn = vn + 1
	else:
		print(size(v) - vn)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 13:44:09) 
-- CODE:
from numpy import*

v = array(eval(input("vetor:")))
vn = zeros(2, dtype=int)

for e in range(size(v)):
	if(e % 2 == 0):
		vn = vn + 1
	else:
		print(size(v) - vn)
		
-- EXECUTION TIME:
0.878589
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[4 4]
[3 3]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[7 7]
[6 6]
[5 5]
[4 4]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[2 2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:44:17) 
-- CODE:
from numpy import*

v = array(eval(input("vetor:")))
vn = zeros(2, dtype=int)

for e in range(size(v)):
	if(e % 2 == 0):
		vn = vn + 1
	else:
		print(size(v) - vn)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:50:27) 
-- CODE:
from numpy import*

v = array(eval(input("vetor:")))
g = 0

for e in range(size(v)):
	if(v[e] % 2 != 0):
		g+=1
v = zeros(g,dtype=int)
h = 0
for e in range(size(v)):
	if(v[e]%2 != 0):
		v[h]=vet[i]
		h+=1
		
print(v)
		print(size(v) - vn)
		
-- ERROR:
File "XXXX", line 17
    print(size(v) - vn)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:51:00) 
-- CODE:
from numpy import*

v = array(eval(input("vetor:")))
g = 0

for e in range(size(v)):
	if(v[e] % 2 != 0):
		g+=1
v = zeros(g,dtype=int)
h = 0
for e in range(size(v)):
	if(v[e]%2 != 0):
		v[h]=vet[i]
		h+=1
		
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:51:24) 
-- CODE:
from numpy import*

v = array(eval(input("vetor:")))
g = 0

for e in range(size(v)):
	if(v[e] % 2 != 0):
		g+=1
v = zeros(g,dtype=int)
h = 0
for e in range(size(v)):
	if(v[e]%2 != 0):
		v[h]=vet[i]
		h+=1
		
print(v)
		
		
-- EXECUTION TIME:
0.93135
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[0 0]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[0 0 0 0]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:54:14) 
-- CODE:
from numpy import*

v = array(eval(input("vetor:")))
g = 0

for e in range(size(v)):
	if(v[e] % 2 != 0):
		g+=1
v = zeros(g,dtype=int)
h = 0
for e in range(size(v)):
	if(v[e]%2 != 0):
		v[h]=v[e]
		h+=1
		
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:54:39) 
-- CODE:
from numpy import*

v = array(eval(input("vetor:")))
g = 0

for e in range(size(v)):
	if(v[e] % 2 != 0):
		g+=1
vet = zeros(g,dtype=int)
h = 0
for e in range(size(v)):
	if(v[e]%2 != 0):
		v[h]=v[e]
		h+=1
		
print(vet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:55:35) 
-- CODE:
from numpy import*

vet = array(eval(input("vetor:")))
g = 0

for e in range(size(vet)):
	if(vet[e] % 2 != 0):
		g+=1
v = zeros(g,dtype=int)
h = 0
for e in range(size(vet)):
	if(vet[e]%2 != 0):
		v[h]=vet[e]
		h+=1
		
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:55:45) 
-- CODE:
from numpy import*

vet = array(eval(input("vetor:")))
g = 0

for e in range(size(vet)):
	if(vet[e] % 2 != 0):
		g+=1
v = zeros(g,dtype=int)
h = 0
for e in range(size(vet)):
	if(vet[e]%2 != 0):
		v[h]=vet[e]
		h+=1
		
print(v)
		
		
-- EXECUTION TIME:
1.02683
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
